--- a/.github/actions/build-ocp/action.yml
+++ b/.github/actions/build-ocp/action.yml
@@ -50,7 +50,7 @@ runs:
         DEBIAN_FRONTEND=noninteractive apt-get install -qq -y \
           mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libxcursor-dev \
           libfreeimage-dev libfreetype-dev libfontconfig-dev git patch clang build-essential \
-          ca-certificates curl unzip
+          ca-certificates curl unzip  > /dev/null 2>&1
 
     # - - -  (micromamba needs ca-certificates for ubuntu)
 
