--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -63,7 +63,7 @@ runs:
         apt-get update -qq
         DEBIAN_FRONTEND=noninteractive apt-get install -qq -y \
           mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libxcursor-dev \
-          libfreeimage-dev libfreetype-dev libfontconfig-dev git patch clang build-essential ca-certificates  
+          libfreeimage-dev libfreetype-dev libfontconfig-dev git patch clang build-essential ca-certificates   > /dev/null 2>&1
           
     # - - - (micromamba needs ca-certificates for ubuntu)
 
