--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -31,7 +31,7 @@ runs:
         set -o pipefail
 
         sudo apt-get update -qq  
-        sudo DEBIAN_FRONTEND=noninteractive apt-get install -qq ca-certificates
+        sudo DEBIAN_FRONTEND=noninteractive apt-get install -qq ca-certificates > /dev/null 2>&1
 
     # - - -
     
