--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -53,24 +53,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-13", "macos-15", "windows-2022"]
-        os: ["windows-2022"]
+        os: ["macos-13", "macos-15", "windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
         include:
-          # - os: "macos-15"
-          #   vtk-libs: ".dylibs/libvtk*.dylib"
-          #   vtk-suffix: "/"
-          #   vtk-prefix: ""
-          #   sed-i: "gsed -i"
-          #   shells: "bash"
-          # - os: "macos-13"
-          #   vtk-libs: ".dylibs/libvtk*.dylib"
-          #   vtk-suffix: "/"
-          #   vtk-prefix: ""
-          #   sed-i: "gsed -i"
-          #   shells: "bash"
+          - os: "macos-15"
+            vtk-libs: ".dylibs/libvtk*.dylib"
+            vtk-suffix: "/"
+            vtk-prefix: ""
+            sed-i: "gsed -i"
+            shells: "bash"
+          - os: "macos-13"
+            vtk-libs: ".dylibs/libvtk*.dylib"
+            vtk-suffix: "/"
+            vtk-prefix: ""
+            sed-i: "gsed -i"
+            shells: "bash"
           - os: "windows-2022"
             vtk-libs: "vtk*.dll"
             vtk-suffix: "/"
@@ -134,12 +133,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-15", "windows-2022"]
-        os: ["windows-2022"]
+        os: ["macos-15", "windows-2022"]
         python-version: ["3.13"]
         include:
-          # - os: "macos-15"
-          #   sed-i: "gsed -i"
+          - os: "macos-15"
+            sed-i: "gsed -i"
           - os: "windows-2022"
             sed-i: "sed -i"
 
@@ -196,28 +194,27 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-13", "macos-15", "windows-2022"]
-        os: ["windows-2022"]
+        os: ["macos-13", "macos-15", "windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
         include:
-          # - os: "macos-15"
-          #   delocate: delocate
-          #   plat: macosx_11_1_arm64
-          #   sed-i: "gsed -i"
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-          #   shells: "bash"
-          #   ocp-tag: "macos-15"
-          # - os: "macos-13"
-          #   delocate: delocate
-          #   plat: macosx_11_1_x86_64
-          #   sed-i: "gsed -i"
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-          #   shells: "bash"
-          #   ocp-tag: "macos-15"
+          - os: "macos-15"
+            delocate: delocate
+            plat: macosx_11_1_arm64
+            sed-i: "gsed -i"
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+            ocp-tag: "macos-15"
+          - os: "macos-13"
+            delocate: delocate
+            plat: macosx_11_1_x86_64
+            sed-i: "gsed -i"
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+            ocp-tag: "macos-15"
           - os: "windows-2022"
             delocate: delvewheel
             plat: win_amd64
@@ -255,17 +252,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
-        os: ["ubuntu-22.04", "windows-2022"]
+        os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
 
         include:
-          # - os: "macos-13"
-          #   sed-i: "gsed -i"
-          # - os: "macos-15"
-          #   sed-i: "gsed -i"
+          - os: "macos-13"
+            sed-i: "gsed -i"
+          - os: "macos-15"
+            sed-i: "gsed -i"
           - os: "windows-2022"
             sed-i: "sed -i"
           - os: "ubuntu-22.04"
