install gsed into test env

--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -58,6 +58,10 @@ runs:
         micromamba activate test
         pip install pytest docutils ipython
 
+        if [[ "$RUNNER_OS" == "macOS" ]]; then
+          brew install gsed
+        fi
+
     # - - -
 
     # - name: Download wheel artifact
