--- a/.github/workflows/build-ocp-stubs.yml
+++ b/.github/workflows/build-ocp-stubs.yml
@@ -1,10 +1,7 @@
 name: Build OCP stubs
 
-# on: workflow_dispatch
-on:
-  push:
-    branches:
-      - v7.9
+on: workflow_dispatch
+
 env:
   OCP: 7.8.1.2
   WHEEL: 7.8.1.2
