--- a/.github/workflows/build-ocpaddons.yml
+++ b/.github/workflows/build-ocpaddons.yml
@@ -1,6 +1,10 @@
 name: Build OCP with pypi VTK V2
 
-on: workflow_dispatch
+# on: workflow_dispatch
+on:
+    push:
+        branches:
+            - v7.9
 
 jobs:
     addons-ubuntu:
