--- a/.github/workflows/build-ocpaddons.yml
+++ b/.github/workflows/build-ocpaddons.yml
@@ -19,7 +19,8 @@ jobs:
                 os: ["ubuntu-22.04"]
                 # python-version: ["3.10", "3.11", "3.12", "3.13"]
                 python-version: ["3.13"]
-                use-vtk: ["vtk", "novtk"]
+                # use-vtk: ["vtk", "novtk"]
+                use-vtk: ["novtk"]
         steps:
             - uses: actions/checkout@v4
 
@@ -42,14 +43,15 @@ jobs:
                 os: ["macos-15"]
                 # python-version: ["3.10", "3.11", "3.12", "3.13"]
                 python-version: ["3.13"]
-                use-vtk: ["vtk", "novtk"]
+                # use-vtk: ["vtk", "novtk"]
+                use-vtk: ["novtk"]
                 include:
                     - os: "macos-15"
                       sed-i: "gsed -i"
-                    - os: "macos-13"
-                      sed-i: "gsed -i"
-                    - os: "windows-2022"
-                      sed-i: "sed -i"
+                    # - os: "macos-13"
+                    #   sed-i: "gsed -i"
+                    # - os: "windows-2022"
+                    #   sed-i: "sed -i"
         steps:
             - uses: actions/checkout@v4
 
