fix secrets usage

--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -13,6 +13,9 @@ inputs:
   use-vtk:
     description: "Whether to use VTK in the build"
     required: true
+  github_token:
+    required: true
+    description: 'GitHub Token'
 
 runs:
   using: "composite"
@@ -52,7 +55,7 @@ runs:
       with:
         name: SDK_${{ inputs.os }}-py_${{ inputs.python-version }}-${{ inputs.use-vtk }}
         run-id: 17977419943
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ inputs.github_token }}
 
     # - - -
     
@@ -62,7 +65,7 @@ runs:
       with:
         name: cadquery-ocp-${{ env.WHEEL }}-${{ inputs.os }}-cp${{ inputs.python-version }}
         run-id: 17977419943
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ inputs.github_token }}
 
     # - - -
 
@@ -72,7 +75,7 @@ runs:
       with:
         name: cadquery-ocp-novtk-${{ env.WHEEL }}-${{ inputs.os }}-cp${{ inputs.python-version }}
         run-id: 17977419943
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ inputs.github_token }}
 
     # - - -
 
