--- a/.github/workflows/build-ocpaddons.yml
+++ b/.github/workflows/build-ocpaddons.yml
@@ -32,7 +32,7 @@ jobs:
                   python-version: ${{ matrix.python-version }}
                   use-vtk: ${{ matrix.use-vtk }}
                   sed-i: "sed -i"
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
 
     addons-win-mac:
         name: Build OCP addons for ${{ matrix.python-version }} on ${{ matrix.os }} (${{ matrix.use-vtk }})
@@ -64,4 +64,4 @@ jobs:
                   python-version: ${{ matrix.python-version }}
                   use-vtk: ${{ matrix.use-vtk }}
                   sed-i: ${{ matrix.sed-i }}
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
