--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -43,7 +43,7 @@ runs:
       with:
         environment-file: environment-${{ inputs.python-version }}.yml
         log-level: warning
-        init-shell: ${{ inputs.shells }}
+        init-shell: bash
         cache-downloads: true
         cache-environment: true
         cache-environment-key: environment-${{ inputs.python-version }}-${{ inputs.os }}-${{ inputs.use-vtk }}
