--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -58,8 +58,8 @@ runs:
         set -e
         set -o pipefail
 
-        apt-get update
-        apt-get install freetype* libfreetype6-dev libgl1-mesa-glx
+        apt-get update -qq
+        apt-get install -qq -y freetype* libfreetype6-dev libgl1-mesa-glx  > /dev/null 2>&1
 
         # micromamba activate addons
 
@@ -157,6 +157,13 @@ runs:
 
         git clone https://github.com/jdegenstein/ocp-addons.git
 
+        cd addons
+        ${{ matrix.sed-i }} '/include_dirs=\[/a\    os.path.join(os.environ["HOME"], "opt", "local", "occt-7.9.1", "include", "opencascade"),' setup.py
+        ${{ matrix.sed-i }} '/library_dirs=\[/a\    os.path.join(os.environ["HOME"], "opt", "local", "occt-7.9.1", "lib"),' setup.py
+        cat setup.py
+        ls -l "~/opt/local/occt-7.9.1/include/opencascade"
+        ls -l "~/opt/local/occt-7.9.1/lib"
+        
     # - - -
 
     - name: Build Wheel 
@@ -168,9 +175,6 @@ runs:
 
         cd ocp-addons
         
-        ${{ matrix.sed-i }} '/include_dirs=\[/a\    os.path.join(os.environ["HOME"], "opt", "local", "occt-7.9.1", "include", "opencascade"),' setup.py
-        ${{ matrix.sed-i }} '/library_dirs=\[/a\    os.path.join(os.environ["HOME"], "opt", "local", "occt-7.9.1", "lib"),' setup.py
-
         python -m build -n
 
     # - - -
