--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -157,13 +157,15 @@ runs:
 
         git clone https://github.com/jdegenstein/ocp-addons.git
 
-        cd addons
+        cd ocp-addons
+
         ${{ matrix.sed-i }} '/include_dirs=\[/a\    os.path.join(os.environ["HOME"], "opt", "local", "occt-7.9.1", "include", "opencascade"),' setup.py
         ${{ matrix.sed-i }} '/library_dirs=\[/a\    os.path.join(os.environ["HOME"], "opt", "local", "occt-7.9.1", "lib"),' setup.py
+       
         cat setup.py
         ls -l "~/opt/local/occt-7.9.1/include/opencascade"
         ls -l "~/opt/local/occt-7.9.1/lib"
-        
+
     # - - -
 
     - name: Build Wheel 
