--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -70,20 +70,20 @@ runs:
 
     # - - -
 
-    # - name: Install MacOS Dependencies (x86_64 / arm64)
-    #   if: runner.os == 'macOS'
-    #   shell: bash -l {0}
-    #   run: |
-    #     # Install MacOS Dependencies (x86_64 / arm64)
-    #     set -e
-    #     set -o pipefail
+    - name: Install MacOS Dependencies (x86_64 / arm64)
+      if: runner.os == 'macOS'
+      shell: bash -l {0}
+      run: |
+        # Install MacOS Dependencies (x86_64 / arm64)
+        set -e
+        set -o pipefail
         
-    #     brew install automake gsed
+        brew install automake gsed
 
-    #     pip install delocate build wheel
+        pip install delocate build wheel
 
-    #     curl -L -O https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX11.3.sdk.tar.xz
-    #     sudo tar -xf MacOSX11.3.sdk.tar.xz -C /opt
+        # curl -L -O https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX11.3.sdk.tar.xz
+        # sudo tar -xf MacOSX11.3.sdk.tar.xz -C /opt
 
     # - - -
 
