reworked the wheel version approach

--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -132,7 +132,8 @@ runs:
 
         ${{ inputs.sed-i }} '/include_dirs=\[/a\    os.path.join(os.environ["GITHUB_WORKSPACE"], "occt-7.9.1-${{ inputs.use-vtk }}", "include", "opencascade"),' setup.py
         ${{ inputs.sed-i }} '/library_dirs=\[/a\    os.path.join(os.environ["GITHUB_WORKSPACE"], "occt-7.9.1-${{ inputs.use-vtk }}", "lib"),' setup.py
-        
+        ${{ inputs.sed-i }} 's/__version__ = "0.1.0"/__version__ = "${{ env.WHEEL }}"/' setup.py
+
         if [[ "$RUNNER_OS" == "Linux" ]]; then
           ${{ inputs.sed-i }} 's/\(extra_compile_args=\["-O3"\)\(.*\)/\1, "-D_GLIBCXX_USE_CXX11_ABI=0", "-std=c++17"\2/' setup.py
         fi
@@ -161,6 +162,7 @@ runs:
         # fi
 
         python -m build -n
+        ls -l dist
 
     # - - -
 
@@ -182,11 +184,13 @@ runs:
         set -o pipefail
         
         cd ocp-addons
+        VERSION=$(awk -F'"' '/^__version__/ {print $2}' setup.py)
 
         # ls -l build/lib.linux*/*.so
         # objdump -T build/lib.linux*/*.so | grep GLIBC_ | sed 's/.*GLIBC_\\([.0-9]*\\).*/\\1/g' | sort -Vu
 
-        env LD_LIBRARY_PATH=$GITHUB_WORKSPACE/occt-7.9.1-${{ inputs.use-vtk }}/lib auditwheel repair --plat manylinux_2_31_x86_64 dist/ocp_addons-*.whl
+        env LD_LIBRARY_PATH=$GITHUB_WORKSPACE/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib auditwheel repair \
+            --plat manylinux_2_31_x86_64 dist/ocp_addons-${VERSION}*.whl
 
     # - - -
 
@@ -200,17 +204,19 @@ runs:
         set -o pipefail
         
         cd ocp-addons
+        VERSION=$(awk -F'"' '/^__version__/ {print $2}' setup.py)
 
         # Patch @rpath/libc++.1.dylib to /usr/lib/libc++.1.dylib
         cd dist
-        python -m wheel unpack ocp_addons-*.whl
-        rm ocp_addons-*.whl
+        python -m wheel unpack ocp_addons-${VERSION}*.whl
+        rm ocp_addons-${VERSION}*.whl
         install_name_tool -change @rpath/libc++.1.dylib /usr/lib/libc++.1.dylib ocp_addons*/*.so
         otool -L ocp_addons*/*.so
-        python -m wheel pack ocp_addons-*
+        python -m wheel pack ocp_addons-${VERSION}
         cd ..
 
-        DYLD_LIBRARY_PATH=$GITHUB_WORKSPACE/occt-7.9.1-${{ inputs.use-vtk }}/lib:/usr/lib python -m delocate.cmd.delocate_wheel --wheel-dir=wheelhouse dist/ocp_addons*.whl
+        DYLD_LIBRARY_PATH=$GITHUB_WORKSPACE/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib:/usr/lib python \ 
+            -m delocate.cmd.delocate_wheel --wheel-dir=wheelhouse dist/ocp_addons-${VERSION}*.whl
 
     # - - -
 
@@ -223,9 +229,10 @@ runs:
         set -o pipefail
         
         cd ocp-addons
-        
-        PATH=LD_LIBRARY_PATH=$GITHUB_WORKSPACE/occt-7.9.1-${{ inputs.use-vtk }}/lib:$PATH
-        python -m delvewheel repair --wheel-dir=wheelhouse dist/ocp_addons*.whl
+        VERSION=$(awk -F'"' '/^__version__/ {print $2}' setup.py)
+
+        PATH=LD_LIBRARY_PATH=$GITHUB_WORKSPACE/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib:$PATH
+        python -m delvewheel repair --wheel-dir=wheelhouse dist/ocp_addons-${VERSION}*.whl
 
     # - - -
 
