--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -209,9 +209,10 @@ runs:
         cd dist
         python -m wheel unpack ocp_addons-${VERSION}*.whl
         rm ocp_addons-${VERSION}*.whl
-        install_name_tool -change @rpath/libc++.1.dylib /usr/lib/libc++.1.dylib ocp_addons*/*.so
+        # install_name_tool -change @rpath/libc++.1.dylib /usr/lib/libc++.1.dylib ocp_addons*/*.so
+        install_name_tool -add_rpath /usr/lib ocp_addons*/*.so
+
         otool -L ocp_addons*/*.so
-        ls -l
         python -m wheel pack ocp_addons-${VERSION}
         cd ..
 
