--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -130,8 +130,16 @@ runs:
 
         cd ocp-addons
 
-        ${{ inputs.sed-i }} '/include_dirs=\[/a\    os.path.join(os.environ["GITHUB_WORKSPACE"], "occt-7.9.1-${{ inputs.use-vtk }}", "include", "opencascade"),' setup.py
-        ${{ inputs.sed-i }} '/library_dirs=\[/a\    os.path.join(os.environ["GITHUB_WORKSPACE"], "occt-7.9.1-${{ inputs.use-vtk }}", "lib"),' setup.py
+        ${{ inputs.sed-i }} '/include_dirs=\[/,/\],/c\
+        include_dirs=[\
+             os.path.join(os.environ["GITHUB_WORKSPACE"], "occt -${{ env.OCCT }}-${{ inputs.use-vtk }}", "include", "opencascade")\
+        ]
+        ' setup.py
+        ${{ inputs.sed-i }} '/library_dirs=\[/,/\],/c\
+        library_dirs=[\
+             os.path.join(os.environ["GITHUB_WORKSPACE"], "occt -${{ env.OCCT }}-${{ inputs.use-vtk }}", "lib")\
+        ],
+        ' setup.py 
 
         if [[ "$RUNNER_OS" == "Linux" ]]; then
           ${{ inputs.sed-i }} 's/\(extra_compile_args=\["-O3"\)\(.*\)/\1, "-D_GLIBCXX_USE_CXX11_ABI=0", "-std=c++17"\2/' setup.py
